Backport:

*) mpm event: Correctly count active child processes in parent process if
   child process dies due to MaxConnectionsPerChild. PR 65592.
   Trunk version of patch:
      https://svn.apache.org/r1893520
   Backport version for 2.4.x of patch:
    Trunk version of patch works
    svn merge -c 1893520 ^/httpd/httpd/trunk .
   +1: rpluem, ylavic, minfrin



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1893660 13f79535-47bb-0310-9956-ffa450edef68